<resources>
    <string name="app_name">ConsigliaViaggi</string>
    <string name="DescrizioneBenvenuto">Salva i tuoi viaggi e le tue esperienze per condividere con altri utenti.</string>
    <string name="SaltaBottone">Salta per ora</string>
    <string name="ContinuaConEmailBottone">Continua con email</string>
    <string name="BenvenutoTesto">BENVENUTO!</string>
    <string name="NonHaiUnAccountTesto">Non hai un account?</string>
    <string name="indirizzo_e_mail">Indirizzo e-mail</string>
    <string name="password">Password</string>
    <string name="registrati">Registrati</string>
    <string name="password_dimenticata">Password dimenticata?</string>
    <string name="accedi">Accedi</string>
    <string name="testoPosizione">Condividendo la tua posizione potrai trovare i migliori luoghi di interesse intorno a te.</string>
    <string name="titoloPosizione">Vuoi condividere la tua posizione?</string>
    <string name="pulsanteConsenti">Consenti</string>
    <string name="pulsanteNonAdesso">Non adesso</string>
    <string name="Titolo">Entra nella comunità</string>
    <string name="TextViewSottotitolo">Inserisci le tue informazioni</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="nickname">Nickname</string>
    <string name="ripeti_password">Ripeti password</string>
    <string name="e_mail">E-mail</string>
    <string name="terminiCondizioni">Registrandoti accetti i Termini e Condizioni</string>
    <string name="passwordRegistrazioneAccedi">Password</string>
    <string name="indirizzo_e_mailRegistrazioneAccedi">Indirizzo e-mail</string>
    <string name="dove_vuoi_andare">Dove vuoi andare?</string>
    <string name="scopri_luoghi_nelle_vicinanze">Scopri luoghi nelle vicinanze</string>
    <string name="todo">TODO</string>
    <string name="vicinanza">Vicinanza</string>
    <string name="prezzo">Prezzo</string>
    <string name="servizi">Servizi</string>
    <string name="animali_permessi">Animali permessi</string>
    <string name="piscina">Piscina</string>
    <string name="vista">Vista</string>
    <string name="connessione_wifi">Connessione wifi</string>
    <string name="area_fumatori">Area fumatori</string>
    <string name="area_bambini">Area bambini</string>
    <string name="accesso_disabili">Accesso disabili</string>
    <string name="parcheggio">Parcheggio</string>
    <string name="salva">Salva</string>
    <string name="annulla">Annulla</string>
    <string name="tipo_struttura">Tipo struttura</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="cerca_un_luogo_o_una_struttura">Cerca un luogo o una struttura</string>
    <string name="cerca">Cerca</string>
    <string name="ricerca_avanzata">Ricerca avanzata</string>
    <string name="vai">Vai</string>
    <string name="non_sono_presenti_strutture">Non sono presenti strutture</string>
    <string name="ciao_utente">Ciao, Utente</string>
    <string name="esci">Esci</string>
    <string name="impostazioni_account">Impostazioni account</string>
    <string name="elimina_account">Elimina account</string>
    <string name="modifica_account">Modifica account</string>
    <string name="informazioni">Informazioni</string>
    <string name="le_mie_recensioni">Le mie recensioni</string>
    <string name="termini_e_condizioni">Termini e condizioni</string>
    <string name="tocca_per_valutare">Tocca per valutare</string>
    <string name="aggiungi_un_titolo">Aggiungi un titolo</string>
    <string name="cosa_ti_piaciuto_nlo_consiglieresti_ad_un_amico">Cosa ti è piaciuto?\nLo consiglieresti ad un amico?</string>
    <string name="invia">Invia</string>
    <string name="ordina_per">Ordina per</string>
    <string name="LeMieRecensioniAvanti"><![CDATA[>]]></string>
    <string name="LeMieRecensioniPagina">Pagina:</string>
    <string name="LeMieRecensioniIndietro"><![CDATA[<]]></string>
    <string name="EliminaRecensioniIndietro">Indietro</string>
    <string name="EliminaRecensioniElimina">Elimina</string>
    <string name="password_attuale">Password attuale</string>
    <string name="cambia_password">Cambia password</string>
    <string name="bottoneaggiorna">Aggiorna</string>
    <string name="nuova_e_mail">Nuova e-mail</string>
    <string name="cambia_e_mail">Cambia e-mail</string>
    <string name="conferma_nuova_password">Conferma nuova password</string>
    <string name="nuova_password">Nuova password</string>
    <string name="conferma_nuova_e_mail">Conferma nuova e-mail</string>
    <string name="EliminaAccountconferma">Conferma</string>
    <string name="EliminaAccountAnnulla">Annulla</string>
    <string name="eliminando_il_tuo_account_tutti_i_tuoi_dati_e_le_recensioni_saranno_definitivamente_eliminati">Eliminando il tuo account, tutti i tuoi dati e le recensioni saranno definitivamente eliminati</string>
    <string name="per_confermare_inserisci_la_tua_password">Per confermare inserisci la tua password</string>
    <string name="ci_dispiace_vederti_andar_via">Ci dispiace vederti andar via!</string>
    <string name="title_activity_pagina_struttura">PaginaStruttura</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="profilo">Profilo</string>
    <string name="home">Home</string>
    <string name="ic_camping">Camping</string>
    <string name="ic_ristorante">Ristorante</string>
    <string name="ic_hotel">Hotel</string>
    <string name="ic_villaggio">Villaggio</string>
    <string name="ic_b_b"><![CDATA[B&B]]></string>
    <string name="elimina">Elimina</string>
</resources>
