<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_hotel"
        android:enabled="true"
        android:icon="@drawable/ic_hotel"
        android:onClick="openHotel"
        android:title="@string/ic_hotel"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_camping"
        android:enabled="true"
        android:icon="@drawable/ic_camping"
        android:onClick="openCamping"
        android:title="@string/ic_camping"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_restaurant"
        android:enabled="true"
        android:icon="@drawable/ic_restaurant"
        android:onClick="openRestaurant"
        android:title="@string/ic_ristorante"
        app:showAsAction="ifRoom" />

</menu>