<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:noHistory = "true"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/DescrizioneBenvenuto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button"
        android:layout_width="186dp"
        android:layout_height="48dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="112dp"
        android:onClick="loginButtonTapped"
        android:text="@string/ContinuaConEmailBottone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="186dp"
        android:layout_height="48dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="112dp"
        android:onClick="skipButtonTapped"
        android:text="@string/SaltaBottone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="138dp"
        android:layout_height="32dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/BenvenutoTesto"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>